@startuml university_masters_app

hide circle
skinparam linetype ortho

class users {
  + id : int <<PK>>
  + email : varchar <<UNIQUE>>
  + role : enum('student','admin','university','super_admin')
  + created_at : timestamp
  + name : varchar
}

class students {
  + id : int <<PK>>
  + user_id : int <<FK>> <<UNIQUE>>
  + first_year_mark : decimal
  + second_year_mark : decimal
  + third_year_mark : decimal
  + calculated_score : decimal
  + speciality : varchar
  + transcript_pdf : varchar
}

class masters {
  + id : int <<PK>>
  + university_id : int <<FK>>
  + name : varchar
  + description : text
  + max_students : int
  + created_at : timestamp
  + application_start_date : date
  + application_end_date : date
}

class applications {
  + id : int <<PK>>
  + student_id : int <<FK>>
  + master_id : int <<FK>>
  + status : enum('pending','accepted','rejected')
  + application_date : timestamp
}

class feedback {
  + id : int <<PK>>
  + user_id : int <<FK>>
  + subject : varchar
  + message : text
  + rating : int
  + created_at : timestamp
}

class master_specialities {
  + id : int <<PK>>
  + master_id : int <<FK>>
  + speciality : varchar
  + created_at : timestamp
}

' Relationships
users "1" -- "0..1" students : has
users "1" -- "0..*" feedback : gives
users "1" -- "0..*" masters : manages (as university)

students "1" -- "0..*" applications : applies for

masters "1" -- "0..*" applications : receives
masters "1" -- "0..*" master_specialities : has

@enduml

